# sedate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-pr.yaml  python-publish.yaml  python-tox.yaml
license/: LICENSE.txt
sedate/: __init__.py  types.py
sedate/tests/: test_sedate.py
src/sedate/: __init__.py  types.py
tests/: test_sedate.py
