[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sedate"
dynamic = ["version", "readme"]
description = "Date/time helper functions used by various Seantis packages."
requires-python = ">=3.10"
authors = [
    { name = "Seantis GmbH", email = "info@seantis.ch" },
]
license = "GPL-2.0-only"
license-files = ["license/LICENSE.txt", "license/LICENSE.GPL"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pytz"]

[dependency-groups]
dev = [
    "bump-my-version",
    "flake8",
    "flake8-type-checking",
    "flake8-pyproject",
    "mypy",
    "prek",
    "pytest",
    "ruff",
    "tox",
    "tox-uv",
    "types-pytz",
    "uv",
]

[project.urls]
Repository = "http://github.com/seantis/sedate"
"Bug Tracker" = "http://github.com/seantis/sedate/issues"
Changelog = "https://github.com/seantis/sedate/blob/main/HISTORY.rst"

[tool.setuptools.package-data]
sedate = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "sedate.__version__"}
readme = {file = ["README.rst", "HISTORY.rst"]}

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
norecursedirs = [
    "*.egg",
    ".git",
    ".*",
    "_*"
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/types.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError"
]

[tool.bumpversion]
current_version = "1.2.0"
commit = true
message = "Release {new_version}"
tag = true
tag_message = "Release {new_version}"

[[tool.bumpversion.files]]
filename = "src/sedate/__init__.py"
search= "__version__ = '{current_version}'"
replace= "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "HISTORY.rst"
search = """
---------
"""
replace = """
---------

{new_version} ({now:%d.%m.%Y})
~~~~~~~~~~~~~~~~~~~
"""

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.flake8]
select = ["TC0", "TC1"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
src = ["src", "tests"]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
]
line-length = 79
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "B0",
    "B904",
    "B909",
    "C4",
    "COM818",
    "D2",
    "D301",
    "D4",
    "E",
    "F",
    "FLY002",
    "I002",
    "ISC",
    "N",
    "PERF",
    "PGH004",
    "PIE",
    "PT",
    "PYI",
    "Q",
    "RUF",
    "SIM",
    "SLOT",
    "UP",
    "W"
]
ignore = [
    "B007",
    "C420",
    "D200",
    "D201",
    "D202",
    "D204",
    "D205",
    "D209",
    "D210",
    "D211",
    "D400",
    "D401",
    "D412",
    "E226",
    "E402",
    "E711",
    "E712",
    "E741",
    "N818",
    "PYI019",
    "PYI041",
    "RUF012",
    "RUF013",
    "RUF021",
    "RUF022",
    "RUF023",
    "RUF031",
    "RUF052",
    "RUF056",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM110",
    "SIM118",
    "SIM210",
    "SIM910",
    "UP009",
    "UP012",
    "UP032",
    "RUF067",
]
unfixable = []
external = ["TC"]
allowed-confusables = ["×"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"sedate/**/*.py" = ["PT"]
"tests/**/*.py" = [
    "C4",
    "D",
    "FLY002",
    "I002",
    "ISC",
    "N",
    "Q",
    "PERF",
    "PGH",
    "PIE",
    "PYI",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.tox]
isolated_build = true
env_list = [
    "py310",
    "py311",
    "py312",
    "py313",
    "py314",
    "lint",
    "bandit",
    "mypy",
    "report",
]

[tool.tox.gh.python]
"3.10" = ["py310"]
"3.11" = ["py311"]
"3.12" = ["py312", "ruff", "bandit", "mypy"]
"3.13" = ["py313"]
"3.14" = ["py314"]

[tool.tox.env_run_base]
use_develop = true
set_env.COVERAGE_FILE = { replace = "if", condition = "not factor.report", then = ".coverage.{env_name}"}
deps = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-codecov[git]",
]
commands = [
    [
        "pytest",
        "--cov",
        "--cov-report=",
        { replace = "posargs", extend = true }
    ],
]

[tool.tox.env.lint]
base_python = "python3.12"
deps = [
    "flake8",
    "flake8-pyproject",
    "flake8-type-checking",
    "ruff",
]
commands = [
    ["ruff", "check"],
    ["flake8", "src/", "tests/"]
]

[tool.tox.env.mypy]
base_python = "python3.12"
deps = [
    "mypy",
    "pytest",
    "types-pytz",
]
commands = [
    ["mypy", "-p", "sedate", "-p", "tests", "--python-version", "3.10"],
    ["mypy", "-p", "sedate", "-p", "tests", "--python-version", "3.11"],
    ["mypy", "-p", "sedate", "-p", "tests", "--python-version", "3.12"],
    ["mypy", "-p", "sedate", "-p", "tests", "--python-version", "3.13"],
    ["mypy", "-p", "sedate", "-p", "tests", "--python-version", "3.14"],
]

[tool.tox.env.bandit]
base_python = "python3.12"
deps = ["bandit[toml]"]
commands = [["bandit", "-q", "-c", "pyproject.toml", "-r", "src"]]

[tool.tox.env.report]
base_python = "python3.12"
skip_install = true
deps = ["coverage"]
commands = [
    ["coverage", "combine"],
    ["coverage", "report", "-m"],
]