[metadata]
name = sedate
version = attr: sedate.__version__
description = Date/time helper functions used by various Seantis packages.
long_description = file: README.rst, HISTORY.rst
license = GPLv2
author = Seantis GmbH
author_email = info@seantis.ch
url = http://github.com/seantis/sedate
project_urls =
    Bug Tracker = http://github.com/seantis/sedate/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: GNU Affero General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = False
packages =
    sedate
python_requires = >=3.7
install_requires =
    pytz

[options.extras_require]
dev =
    bump2version
    pre-commit
    tox

[options.package_data]
* =
    README.rst
    license/LICENSE.GPL
    license/LICENSE.txt
    HISTORY.rst
    py.typed

[bdist_wheel]
universal=1
