[metadata]
name = sedate
version = attr: sedate.__version__
description = Date/time helper functions used by various Seantis packages.
long_description = file: README.rst, HISTORY.rst
license = GPLv2
author = Seantis GmbH
author_email = info@seantis.ch
url = http://github.com/seantis/sedate
project_urls =
    Bug Tracker = http://github.com/seantis/sedate/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = False
packages =
    sedate
python_requires = >=3.9
install_requires =
    pytz

[options.extras_require]
dev =
    bump-my-version
    flake8
    flake8-type-checking
    mypy
    pre-commit
    pre-commit-uv
    ruff
    tox
    tox-uv
    types-pytz
    uv

[options.package_data]
sedate =
    py.typed

[bdist_wheel]
universal=1

[flake8]
select = TC0,TC1
per_file_ignores =
    *.pyi: TC
    tests/**.py: TC
